--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customes.html">Customers</a></li>
+          <li><a href="./customers.html">Customers</a></li>
           <li><a href="./resourses.html">Resources</a></li>
         </ul>
       </nav>
@@ -24,19 +24,68 @@
 
     <main>
       <section>
-        <h1>
-          <p>
+        <h1>Work at the speed of thought</h1>
+          <p>Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to imagine your next user experience.
             <ul>
-        <li><button></button></li>
-        <li><button></button></li>
+        <li><button type="button">Get started</button></li>
+        <li><button type="button">Watch the Video</button></li>
       </ul>
+      <img src="./images/hero-img.png" alt="hero-img" width="610" height="555">
           </p>
-        </h1>
       </section>
 
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h2>Product  was Built Specifically for You</h2>
+        <ul> 
+          <img src="./images/icon-1.png" alt="icon-1">
+          <li>
+            <h3>First click tests</h3>
+            <p>While most people enjoy casino gambling,</p>
+           </li>
+           <li>
+            <img src="./images/icon-2.png" alt="icon-2">
+            <h3>Design surveys</h3>
+            <p>Sports betting, lottery and bingo playing for the fun</p>
+           </li>
+           <li>
+            <img src="./images/icon-3.png" alt="icon-3">
+            <h3>Preference tests</h3>
+            <p>The Myspace page defines the individual.</p>
+           </li>
+           <li>
+            <img src="./images/icon-4.png" alt="icon-4">
+            <h3>Five second tests</h3>
+            <p>Personal choices and the overall personality of the person.</p>
+           </li>
+        </ul>
+        <button type="button">SIGN UP NOW</button>
+      </section>
+
+      <section>
+        <p>Effortless Validation for</p>
+        <h2>Management</h2>
+        <ul>
+          <li>
+            <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+          </li>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
+          </li>
+        </ul>
+        <img src="./images/management.png" alt="management" width="540" height="500">
+      </section>
+
+      <section>
+        <img src="./images/support.png" alt="support" width="540" height="500">
+        <p>Easier design making for</p>
+        <h2>Customer Support</h2>
+        <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+      </section>
     </main>
   </body>
 </html>
