--- a/pricing.html
+++ b/pricing.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customes.html">Customers</a></li>
+          <li><a href="./customers.html">Customers</a></li>
           <li><a href="./resourses.html">Resources</a></li>
         </ul>
       </nav>
