--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><img src="./images/logo.jpg" alt="" /></a>
+        <a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
@@ -30,30 +30,34 @@
         <li><button type="button">Get started</button></li>
         <li><button type="button">Watch the Video</button></li>
       </ul>
-      <img src="./images/hero-img.png" alt="hero-img" width="610" height="555">
+      <img src="./images/hero-img.png" alt="hero-img" width="610" height="555"/>
           </p>
       </section>
 
       <section>
         <h2>Product  was Built Specifically for You</h2>
         <ul> 
-          <img src="./images/icon-1.png" alt="icon-1">
           <li>
+             <img src="./images/icon-1.png" alt="icon-1"/>
+            <div></div>
             <h3>First click tests</h3>
             <p>While most people enjoy casino gambling,</p>
            </li>
            <li>
-            <img src="./images/icon-2.png" alt="icon-2">
+            <img src="./images/icon-2.png" alt="icon-2"/>
+            <div></div>
             <h3>Design surveys</h3>
             <p>Sports betting, lottery and bingo playing for the fun</p>
            </li>
            <li>
-            <img src="./images/icon-3.png" alt="icon-3">
+            <img src="./images/icon-3.png" alt="icon-3"/>
+            <div></div>
             <h3>Preference tests</h3>
             <p>The Myspace page defines the individual.</p>
            </li>
            <li>
-            <img src="./images/icon-4.png" alt="icon-4">
+            <img src="./images/icon-4.png" alt="icon-4"/>
+            <div></div>
             <h3>Five second tests</h3>
             <p>Personal choices and the overall personality of the person.</p>
            </li>
@@ -62,12 +66,10 @@
       </section>
 
       <section>
-        <p>Effortless Validation for</p>
-        <h2>Management</h2>
-        <ul>
-          <li>
+        <h2><span>Effortless Validation for</span>Management</h2>
+        
             <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
-          </li>
+          <ul>
           <li>
             <h3>Accessory makers</h3>
             <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
@@ -77,15 +79,210 @@
             <p>If you are looking for a new way to promote your business that won’t cost you more money,</p>
           </li>
         </ul>
-        <img src="./images/management.png" alt="management" width="540" height="500">
+        <img src="./images/management.png" alt="management" width="540" height="500"/>
       </section>
 
       <section>
-        <img src="./images/support.png" alt="support" width="540" height="500">
-        <p>Easier design making for</p>
-        <h2>Customer Support</h2>
+        <img src="./images/support.png" alt="support" width="540" height="500"/>
+        <h2><span>Easier decision making for </span> Customer Support</h2>
         <p>The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person.</p>
+     <ul>
+          <li>
+            <div></div>
+            <p>Never worry about overpaying for your energy again.</p>
+          </li>
+          <li>
+            <div></div>
+            <p>
+              We will only switch you to energy companies that we trust and will
+              treat you right
+            </p>
+          </li>
+          <li>
+            <div></div>
+            <p>We track the markets daily and know where the savings are.</p>
+          </li>
+        </ul>
       </section>
+
+      <section>
+        <h2><span>Optimisation for</span> Collaborative</h2>
+        <p>
+          Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. 
+        </p>
+        <ul>
+          <li>
+            <h3>Accessory makers</h3>
+            <p>While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+          </li>
+          <li>
+            <h3>Alterationists</h3>
+            <p>If you are looking for a new way to promote your business that won’t cost you more money, </p>
+          </li>
+        </ul>
+        <img src="./images/collaboration.png" alt="Collaborative" width="540" height="500" />
+      </section>
+<section>
+  <h2>Quick & Easy Process</h2>
+  <p>
+    Do you require some help for your project: Conception workshop,
+prototyping, marketing strategy, landing page, Ux/UI?
+  </p>
+  <ul>
+    <li>
+      <img src="./images/girl.png" alt="first-worker" width="98"/>
+      <p>I can take care of your pitch</p>
+    </li>
+     <li>
+      <img src="./images/lady.png" alt="second-worker" width="98"/>
+      <p>I can prototype your app</p>
+    </li>
+     <li>
+      <img src="./images/boy.png" alt="third-worker" width="98"/>
+      <p>I can take care of your pitch</p>
+    </li>
+     <li>
+      <img src="./images/man.png" alt="forth-worker" width="98"/>
+      <p>I can help marketing strategy</p>
+    </li>
+  </ul>
+  <button type="button">Contact our expert</button>
+</section>
+
+<section>
+  <h2>Contents Strategies</h2>
+    <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img src="./images/increasing.png" alt="hands" width="350" height="185"/>
+                <p>By <span>Wahid Ari</span> | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img src="./images/motivation.png" alt="blackphoto" width="350" height="185"/>
+             <p>By <span>Wahid Ari</span> | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img src="./images/success.png" alt="skyscraper" width="350" height="185"/>
+             <p>By <span>Wahid Ari</span> | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+</section>
+ 
+<section>
+  <h2>Price Table</h2>
+        <p>We offer competitive price</p>
+        <ul>
+          <li>
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <p>0</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>Only 2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <p>5</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+          <li>
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <p>10</p>
+            <p>$</p>
+            <p>Per / month</p>
+            <ul>
+              <li>10+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button type="button">Order Now</button>
+          </li>
+        </ul>
+      </section>
+
+       <section>
+        <h2>What Clients Say</h2>
+        <p>
+          Problems trying to resolve the conflict between the two major realms
+          of Classical physics: Newtonian mechanics
+        </p>
+        <ul>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client1.png" alt="client1" width="50"/>
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client2.png" alt="client2" width="50"/>
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+          <li>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <img src="./images/client3.png" alt="client3" width="50" />
+            <h3>Wahid Ari</h3>
+            <p>Designer</p>
+          </li>
+        </ul>
+      </section>
+
+       <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <button type="button">Get This</button>
+        <img src="./images/screenpromo.png" alt="promo" width="351" height="331"/>
+       </section>
     </main>
+
+    <footer>
+<a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
+ <p>Resource</p>
+      <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <p>knowing you're always on the best energy deal. </p>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+      <p>Enter your phone number</p>
+<button type="button">Sign up Now</button>
+    </footer>
   </body>
 </html>
