--- a/customers.html
+++ b/customers.html
@@ -21,5 +21,161 @@
         <li><button type="button">Sing Up</button></li>
       </ul>
     </header>
+
+    <main>
+      <section>
+        <h2>Our Clients</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/airbnblogo.png"
+              alt="airbnb"
+              width="159"
+              height="50"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/googlelogo.png"
+              alt="google"
+              width="146"
+              height="50"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/microsoftlogo.png"
+              alt="microsoft"
+              width="213"
+              height="44"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/fedexlogo.png"
+              alt="fedex"
+              width="140"
+              height="42"
+            />
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Why Choose Product?</h2>
+        <ul>
+          <li>
+            <div></div>
+            <h3>Special Business</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <div></div>
+            <h3>Instant Result</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+          <li>
+            <div></div>
+            <h3>Fastest way to organize</h3>
+            <p>
+              Product helps you see how many more days you need to work to reach
+              your financial goal for the month and year.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>How Product Work?</h2>
+        <ul>
+          <li>
+            <img src="./images/apply.png" alt="apply" width="500" />
+            <p>STEP 1</p>
+            <h3>Apply for a product</h3>
+            <p>
+              Completing our easy step-by-step application form gives you access
+              to multiple business with multiple products. We analyse your
+              business through our proprietary credit analysis technology
+            </p>
+          </li>
+          <li>
+            <img src="./images/pay.png" alt="pay" width="500" />
+            <p>STEP 2</p>
+            <h3>Pay fully refundable</h3>
+            <p>
+              Product will contactting you instantly to receive payment of the
+              Application Fee. if no offer of product is available, your fee
+              will be fully refunded.
+            </p>
+          </li>
+          <li>
+            <img src="./images/completion.png" alt="completion" width="500" />
+            <p>STEP 3</p>
+            <h3>Completion</h3>
+            <p>
+              Product will continue to liase between borrower and manager to
+              procees and complete a quick and efficient settlement
+            </p>
+          </li>
+        </ul>
+        <button type="button">Get in touch with us</button>
+      </section>
+
+      <section>
+        <h2>Join thousand of other who have already received offers</h2>
+        <ul>
+          <li>
+            <h3>Business</h3>
+            <p>Cash Flow</p>
+            <p>Asset Backed</p>
+            <p>Receivables Finance</p>
+            <p>Find the best business product</p>
+          </li>
+
+          <li>
+            <h3>Enterprise</h3>
+            <p>Site Acquisition</p>
+            <p>Bridge</p>
+            <p>Development Financing</p>
+            <p>Find the best business product</p>
+          </li>
+        </ul>
+      </section>
+       
+      <section>
+        <h2 hidden>Promo</h2>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <button type="button">Get This</button>
+        <img src="./images/screenpromo.png" alt="promo" width="351" height="331"/>
+       </section>
+   </main>
+
+    <footer>
+<a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
+ <p>Resource</p>
+      <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <p>knowing you're always on the best energy deal. </p>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+<button type="button">Sign up Now</button>
+    </footer>
+      </section>
+  
   </body>
 </html>
