--- a/resourses.html
+++ b/resourses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resources</title>
   </head>
-  <body>
+  <>
     <header>
       <nav>
         <a href="./index.html"><img src="./images/logo.jpg" alt="" /></a>
@@ -21,5 +21,131 @@
         <li><button type="button">Sing Up</button></li>
       </ul>
     </header>
+
+    <main>
+      <section>
+        <h1>Great Business made with Product.</h1>
+        <img src="./images/monitors.png" alt="monitors" width="541" />
+        <p>
+          Build better customer relationships easily messaging that provides a
+          more personal experience for you and your customers.
+        </p>
+        <p>Enter your email adress</p>
+        <button type="button">Join Now</button>
+        <img src="./images/people.png" alt="people" width="121" height="50" />
+        <p>Join over 4,000+ other</p>
+      </section>
+
+      <section>
+        <h2>Latest Stories</h2>
+        <p>
+          We focus on ergonomics and meeting you where you work. It's only a
+          keystroke away.
+        </p>
+        <ul>
+          <li>
+            <img
+              src="./images/increasing.png"
+              alt="story1"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="./images/meeting.png"
+              alt="story2"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="./images/watch.png"
+              alt="story3"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+          <li>
+            <img
+              src="./images/handnote.png"
+              alt="story4"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Increasing Prosperity With Positive Thinking</h3>
+          </li>
+          <li>
+            <img
+              src="./images/typing.png"
+              alt="story5"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Motivation Is The First Step To Success</h3>
+          </li>
+          <li>
+            <img
+              src="./images/wbhands.png"
+              alt="story6"
+              width="348"
+              height="187"
+            />
+            <p>By Wahid Ari | 03 March 2019</p>
+            <h3>Success Steps For Your Personal Or Business</h3>
+          </li>
+        </ul>
+        <p>More Stories</p>
+      </section>
+    
+
+    <section>
+      <h2>Contact Us</h2>
+      <p>Need more detailed information? Get in touch with us.</p>
+      <ul>
+        <li><img src="./images/insta.png" alt="instagram" width="50" /></li>
+        <li><img src="./images/fcbook.png" alt="facebook" width="50" /></li>
+        <li><img src="./images/twitter.png" alt="twitter" width="50" /></li>
+      </ul>
+      <img src="./images/map.png" alt="map" width="871" />
+
+      <h3>Send a message</h3>
+      <p>Your Name</p>
+      <p>Your Email</p>
+      <p>Your Message</p>
+      <button type="button">Send</button>
+    </section>
+    </main>
+
+    <footer>
+<a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
+ <p>Resource</p>
+      <ul>
+        <li>About Us</li>
+        <li>Blog</li>
+        <li>Contact</li>
+        <li>FAQ</li>
+      </ul>
+      <p>Legal Stuff</p>
+      <ul>
+        <li>Disclaimer</li>
+        <li>Financing</li>
+        <li>Privacy Policy</li>
+        <li>Terms of Service</li>
+      </ul>
+      <p>knowing you're always on the best energy deal. </p>
+      <p>Made With Love By Figmaland All Right Reserved</p>
+      
+<button type="button">Sign up Now</button>
+    </footer>
   </body>
 </html>
