--- a/customers.html
+++ b/customers.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><img src="./images/logo.jpg" alt="" /></a>
+        <a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
