--- a/resourses.html
+++ b/resourses.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resources</title>
   </head>
-  <>
+  
     <header>
       <nav>
-        <a href="./index.html"><img src="./images/logo.jpg" alt="" /></a>
+        <a href="./index.html"><img src="./images/logo.jpg" alt="logo" />Product</a>
         <ul>
           <li><a href="./index.html">Product</a></li>
           <li><a href="./pricing.html">Pricing</a></li>
